--- a/src/app/sites/about/about.component.html
+++ b/src/app/sites/about/about.component.html
@@ -1,8 +1,8 @@
 <div class="view view-page-header">
   <div class="full-bg-img">
-    <div class="mask flex-center rgba-blue-strong"><!-- -->
+    <div class="mask flex-center rgba-blue-strong">
       <div class="container">
-        <div class="white-text wow fadeInRight">
+        <div class="white-text wow fadeIn">
 
           <h2 class="header-page">O studiach</h2>
 
@@ -15,18 +15,155 @@
 <div class="py-5 mt-3">
 
   <div class="container">
-    <div class="row">
+    <div class="row" id="o-studiach-sections">
 
-      <p>Studia podyplomowe "Technologie Internetowe" adresowane są do wszystkich absolwentów szkół wyższych, którzy
-        pragną zapoznać się z najnowocześniejszymi technologiami funkcjonującymi na bazie Internetu, w szczególności
-        technologiami publikowania i programowania w sieci Web, programowaniem urządzeń mobilnych, zagadnieniami
-        systemów baz danych z dostępem przez Internet oraz problematyką sieci komputerowych.</p>
+      <!-- page content start -->
 
-        <p>O przyjęcie na studia podyplomowe mogą ubiegać się wszystkie osoby z wykształceniem wyższym, również
-        nietechnicznym (posiadające dyplom licencjata, inżyniera lub magistra), zainteresowane problematyką studiów.</p>
+      <div class="img-section img-section-left">
 
-        <p>Od słuchaczy wymagana jest umiejętność podstawowej obsługi komputera oraz znajomość podstaw programowania w
-        dowolnym języku.</p>
+        <div class="row">
+          <div class="col-5 animated wow fadeInLeft" data-wow-delay="0.3s">
+            <div class="section-picture img-a-1"></div>
+          </div>
+          <div class="col-7 animated wow fadeIn" data-wow-delay="0.3s">
+            <div class="section-text">
+              <h2 class="h-article">Adresaci studiów</h2>
+
+              <p>Studia podyplomowe "Technologie Internetowe" adresowane są do wszystkich absolwentów szkół wyższych,
+                którzy
+                pragną zapoznać się z najnowocześniejszymi technologiami funkcjonującymi na bazie Internetu, w
+                szczególności
+                technologiami publikowania i programowania w sieci Web, programowaniem urządzeń mobilnych,
+                zagadnieniami
+                systemów baz danych z dostępem przez Internet oraz problematyką sieci komputerowych.</p>
+
+              <p>O przyjęcie na studia podyplomowe mogą ubiegać się wszystkie osoby z wykształceniem wyższym, również
+                nietechnicznym (posiadające dyplom licencjata, inżyniera lub magistra), zainteresowane problematyką
+                studiów.</p>
+
+              <p>Od słuchaczy wymagana jest umiejętność podstawowej obsługi komputera oraz znajomość podstaw
+                programowania w
+                dowolnym języku.</p>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="img-section img-section-right">
+
+        <div class="row">
+
+          <div class="col-7 wow fadeIn" data-wow-delay="0.3s">
+            <div class="section-text">
+
+              <h2 class="h-article">Cel kształcenia</h2>
+
+              <p>Głównym celem kształcenia jest poznanie aktualnej wiedzy teoretycznej oraz zdobycie przez słuchaczy
+                umiejętności praktycznych z zakresu technologii funkcjonujących na bazie Internetu, w szczególności:
+                podstaw
+                obiektowych języków programowania, technik publikowania w sieci Web oraz metod projektowania,
+                programowania i
+                wdrażania systemów baz danych z dostępem przez Internet, programowania urządzeń mobilnych. Przyjęcie
+                takiego
+                profilu studiów uzasadnione jest zapotrzebowaniem rynku pracy na pracowników, którzy skutecznie
+                potrafią
+                wdrażać technologie Internetowe, szczególnie te, które są związane z gwałownym rozwojem rynku urządzeń
+                mobilnych.</p>
+            </div>
+          </div>
+          <div class="col-5 wow fadeInRight" data-wow-delay="0.3s">
+            <div class="section-picture img-a-2"></div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="img-section img-section-left">
+
+        <div class="row">
+          <div class="col-5 wow fadeInLeft" data-wow-delay="0.3s">
+            <div class="section-picture img-a-3"></div>
+          </div>
+          <div class="col-7 wow fadeIn" data-wow-delay="0.3s">
+            <div class="section-text">
+
+              <h2 class="h-article">Nabywana wiedza</h2>
+
+              <p>W trakcie studiów podyplomowych "Technologie internetowe" studenci poznają:</p>
+
+              <ul>
+                <li>Programowanie obiektowe w językach C++ (zasady programowania obiektowego, pisanie aplikacji) oraz
+                  Java
+                  (budowa nowoczesnych aplikacji sieciowych i mobilnych),</li>
+                <li>Technologie sieci Web związane z językami: HTML z CSS (techniki projektowania witryn AWD i RWD),
+                  JavaScript
+                  i HTML DOM (tworzenie dynamicznych, interaktywnych, responsywnych witryn), XML z XSL, XML DOM
+                  (oddzielenie
+                  treści witryny od jej wyglądu), XSLT wraz z językiem XPath (transformacje dokumentu XML do innego
+                  formatu,
+                  np. XHTML), PHP (OOP, programowanie w architekturze MVC). Wybrane inne technologie tworzenia
+                  nowoczesnych
+                  witryn i aplikacji internetowych, w tym technologię AJAX eliminującą konieczność przeładowywania
+                  zawartości
+                  całej strony, aplikacje w architekturze SPA (Single Page Application).</li>
+                <li>Elementy technologii JAVA (platformy Java EE, Java SE z JavaFX, Java ME). Budowa wieloplatformowych
+                  aplikacji, apletów, serwletów i witryn w technologii JSP. Tworzenie graficznego interfejsu
+                  użytkownika (GUI)
+                  przy pomocy klas biblioteki Swing i JavaFX. Technologia JavaBeans (EJB). Współpraca języków Java i
+                  XML (SAX,
+                  Stax, DOM, XSLT, JAXB). Web Services. Java a bazy danych (JDBC). Programowanie urządzeń mobilnych,
+                  midlety
+                  (Biblioteka LWUIT). Android SDK, Android Studio,</li>
+                <li>Programowanie systemów bazodanowych, metodyka projektowania relacyjnych baz danych. Podstawy języka
+                  SQL,
+                  definiowanie schematu bazy, modyfikowanie zawartości relacji, zaawansowane konstrukcje do
+                  formułowania
+                  zapytań. Obiektowe rozszerzenia języka SQL. Bazy danych MS Access, MySQL oraz Oracle. Technologie baz
+                  danych
+                  z dostępem przez Internet (JSP, JSF, ASP, PHP), elementy handlu elektronicznego (sklepy internetowe).
+                  Technologia serwlet XSQL oraz język XSQL,</li>
+                <li>Topologie sieci komputerowych, adresacja, architektury sieci komputerowych. Podstawy routingu.
+                  Projektowanie sieci komputerowych</li>
+              </ul>
+
+              <p>Studia wyróżniają się dużą ilością zajęć laboratoryjnych, podczas których słuchacze mają możliwość
+                zapoznania
+                się z narzędziami programowania, praktycznymi przykładami, a także mają możliwość bezpośredniego
+                sprawdzania
+                nabywanej wiedzy. </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="img-section img-section-right">
+
+        <div class="row">
+
+          <div class="col-7 wow fadeIn" data-wow-delay="0.3s">
+            <div class="section-text">
+
+              <h2 class="h-article">Oferta dodatkowa</h2>
+
+              <p>W ramach prowadzonych studiów podyplomowych "Technologie internetowe" istnieje możliwość przygotowania
+                studentów do dodatkowych egzaminów certyfikujących firm Oracle i Microsoft. Zdanie wybranego
+                dodatkowego
+                egzaminu uprawnia do otrzymania odpowiedniego certyfikatu, honorowanego na całym świecie. Studenci
+                zainteresowani przystąpieniem do w/w egzaminów uzyskają bezpłatny dostęp do oryginalnych materiałów
+                szkoleniowych danej firmy (na CD lub on-line) oraz pomoc w ramach zajęć dydaktycznych. Koszt pierwszego
+                przystąpienia do w/w egzaminów certyfikujących może być częściowo pokryty przez Politechnikę
+                Rzeszowską.</p>
+            </div>
+          </div>
+          <div class="col-5 wow fadeInRight" data-wow-delay="0.3s">
+            <div class="section-picture img-a-4"></div>
+          </div>
+        </div>
+
+      </div>
 
     </div>
   </div>
