--- a/src/app/sites/home/home.component.scss
+++ b/src/app/sites/home/home.component.scss
@@ -230,10 +230,9 @@
 
 }
 #home-2 .card .rgba-blue-light:hover {
-  background-color: rgba(33, 150, 243, 0.8);
-  -webkit-transition: background-color 0.25s; /* Safari */
-  transition: background-color 0.25s;
-
+  // background-color: rgba(33, 150, 243, 0.8);
+  // -webkit-transition: background-color 0.25s; /* Safari */
+  // transition: background-color 0.25s;
 }
 #home-2 .card-image {
   background-size: cover;
