--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,16 @@
 html {
   //font-size: 100%;
 }
+h1, h2, h3, h4, h5, h6, .p-100 {
+  width: 100%;
+}
+.h-article {
+  padding: 1em 0;
+}
+.bg-grey-light {
+  background-color: rgba(0, 0, 0, 0.02);
+}
+
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575px) {
   body {
@@ -54,6 +64,9 @@ html {
 .navbar {
   z-index: 10;
   box-shadow: none !important;
+}
+#header-top .navbar {
+  z-index: 12;
 }
 .view-100vh {
   background-repeat: no-repeat;
@@ -132,9 +145,16 @@ html {
   background: -o-linear-gradient(50deg,#45cafc,#303f9f)!important;
   background: linear-gradient(40deg,#45cafc,#303f9f)!important;
 }
+// .navbar {
+  
+// }
 .panel-nav .navbar {
   background: grey none !important;
-
+  box-shadow: none;
+}
+.page-nav .navbar {
+  background: #2196f3 none !important;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.10), 0 2px 10px 0 rgba(0, 0, 0, 0.10) !important;
 }
 
 .ladowanie {
@@ -148,4 +168,69 @@ html {
 .ladowanie:hover {
   background-color: inherit !important;
 }
+
+.program-header-text {
+  padding: 0 2em;
+}
+.program-header-text h3 {
+  // font-weight: bold;
+  padding: 0;
+}
+.program-muted {
+  margin-top: 2.5em;
+  background-color: rgba(0,0,0,0.02);
+  width: 100%;
+}
+.program-muted p {
+  color: rgba(0,0,0,0.5);
+  padding: 0;
+  font-size: 0.8em;
+}
+.program-muted p.warn {
+  font-weight: bold;
+  padding: 0.75em 0 0 0;
+}
+.btn-rounded {
+  -webkit-border-radius: 10em;
+  border-radius: 10em;
+}
+.btn-floating {
+  -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
+  box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
+  width: 47px;
+  height: 47px;
+  position: relative;
+  z-index: 1;
+  vertical-align: middle;
+  display: inline-block;
+  overflow: hidden;
+  -webkit-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  margin: 10px;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  padding: 0;
+  cursor: pointer;
+}
+
+.btn-floating i {
+  display: inline-block;
+  width: inherit;
+  text-align: center;
+  color: #fff;
+  font-size: 1.25rem;
+  line-height: 47px;
+}
+
+.left-col-icon {
+  padding: 2em 0;
+}
+.left-col-icon-last {
+  padding-bottom: 0;
+}
+.left-col-icon .icon-left h2 {
+  text-align: center;
+}
+
 
